--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PROJECT_ID='paper-ds-production'
-CREDENTIALS_FILE_PATH='/home/yogi/Data Squad/Aril/APE/skilled-compass.json'
-GEMINI_MODEL = "gemini-1.5-flash"
+PROJECT_ID='your_project_id'
+CREDENTIALS_FILE_PATH='path/to/creads_vertex_ai.json'
+GEMINI_MODEL = "gemini-model-name"
 YOLO_MODEL_PATH='models/receipt_detector.pt'
